# learning-cmake

./: .gitignore  README.md
cmake-examples/: README.md
cmake-examples/01-basic/A-hello-cmake/: CMakeLists.txt
cmake-examples/01-basic/B-hello-header/: CMakeLists.txt  hello_header
cmake-examples/01-basic/B-hello-header/include/folder/: inc.h
cmake-examples/01-basic/B-hello-header/src/: Hello.cpp  inc..cpp  main.cpp
cmake-examples/01-basic/C-static-library/: CMakeLists.txt
cmake-examples/01-basic/C-static-library/src/: Hello.cpp  main.cpp
cmake-official-tutorial/: .gitignore  README.md
hitchhikers-guide-to-cmake/: README.md
